--- a/skins/default/list.html
+++ b/skins/default/list.html
@@ -1,15 +1,15 @@
 <load target="css/button_flat.css" />
 
 <style>
-#ggboardmailing_btn {margin-bottom:10px; }
+#ggward_btn {margin-bottom:10px; }
 </style>
 
 <div align="{$widget_info->align}">
 <!--@if($widget_info->is_Member == 'N')-->
-<a id="ggboardmailing_btn" href="#" class="xet_btn medium asbestos">{$widget_info->is_Count}명 소식 받는중</a>
-<a id="ggboardmailing_btn" href="#" onclick="javascript:if(confirm('이 게시판의 새글소식을 메일로 받으시겠습니까?')) document.location.href='{getUrl('','mid',$mid,'ggstatus','insert','document_srl',Context::get('document_srl'),'comment_srl',Context::get('comment_srl'))}'; else return false;" class="xet_btn medium silver">{$widget_info->before_btn_name}</a>
+<a id="ggward_btn" href="#" class="xet_btn medium asbestos" cond="$logged_info->is_admin == 'Y'">현재 {$widget_info->is_Count} 와드</a>
+<a id="ggward_btn" href="#" onclick="javascript:if(confirm('이 글에 와드를 설치하시겠습니까?')) document.location.href='{getUrl('','mid',$mid,'ggstatus','ggward_insert','document_srl',Context::get('document_srl'),'comment_srl',Context::get('comment_srl'))}'; else return false;" class="xet_btn medium silver">{$widget_info->before_btn_name}</a>
 <!--@elseif($widget_info->is_Member == 'A')-->
-<a id="ggboardmailing_btn" href="#" class="xet_btn medium asbestos">{$widget_info->is_Count}명 소식 받는중</a>
-<a id="ggboardmailing_btn" href="#" onclick="javascript:if(confirm('정말 탈퇴하시겠습니까?')) document.location.href='{getUrl('','mid',$mid,'ggstatus','delete')}'; else return false;" class="xet_btn medium red">{$widget_info->after_btn_name}</a>
+<a id="ggward_btn" href="#" class="xet_btn medium asbestos">현재 {$widget_info->is_Count} 와드</a>
+<a id="ggward_btn" href="#" onclick="javascript:if(confirm('정말 와드를 제거 하시겠습니까?')) document.location.href='{getUrl('','mid',$mid,'ggstatus','ggward_delete','document_srl',Context::get('document_srl'),'comment_srl',Context::get('comment_srl'))}'; else return false;" class="xet_btn medium red">{$widget_info->after_btn_name}</a>
 <!--@endif-->
 </div>
